changed scrollbar style and fixed some overflow behavior

--- a/src/App.css
+++ b/src/App.css
@@ -440,3 +440,27 @@
 .review-container {
   overflow: clip;
 }
+
+::-webkit-scrollbar {
+  width: 5px; 
+  height: 7px;
+}
+
+/* Styling the scrollbar thumb */
+::-webkit-scrollbar-thumb {
+  background-color: #63636486;
+  outline: 1px solid #63636486;
+  border-radius: 50px;
+}
+
+/* Styling the scrollbar track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 4px rgba(0,0,0,0.2);
+}
+
+@-moz-document url-prefix() {
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: #63636486;
+  }
+}
